Remove useless assignments to local variable